--- a/CSS - React Web.css
+++ b/CSS - React Web.css
@@ -3,7 +3,7 @@ body {
     margin: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;justify-content: center;
+    align-items: center;
     
 }
     
@@ -49,6 +49,7 @@ p {
     border: 4px  dashed rosybrown;
     margin: 20px;
     padding: 9px;
+    border-radius: 8px;
 }
 
 .Imgg {
@@ -64,6 +65,7 @@ p {
 .flex-comtainer {
     display: flex;
     list-style: none;
+    
 }
 
 .flex-item {
@@ -74,7 +76,8 @@ p {
   font-size: 20px;
   text-align: center;
   margin: 10px;
-  color:bisque
+  color:bisque;
+  border-bottom-left-radius: 25px
 }
 .column {
     display: flex;
