--- a/CSS - React Web.css
+++ b/CSS - React Web.css
@@ -1,86 +1,294 @@
-body {
-    background-color:bisque;
-    margin: 20px;
+@import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Koulen&family=Rajdhani&family=Raleway:ital,wght@0,100;1,100&family=Satisfy&display=swap');
+
+body{
+    font-family: 'Grape Nuts', cursive;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+/* Parte1 */
+
+.wrapper{
+    background-color: #00ACC1;
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkbox{
+    height: 100px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    cursor: pointer;
+}
+
+.checkbox .trace{
+    width: 90px;
+    height: 8px;
+    background-color: black;
+    position: absolute;
+    border-radius: 4px;
+    transition: 0.5s ease-in-out;
+
+}
+
+.checkbox .trace:nth-child(1){
+    top:20px;
+    transform: rotate(0);
+}
+.checkbox .trace:nth-child(2){
+    top:44px;
+    transform: rotate(0);
+}
+.checkbox .trace:nth-child(3){
+    top:66px;
+    transform: rotate(0);
+}
+
+#toggle{
+    display: none;
+}
+
+#toggle:checked + .checkbox .trace:nth-child(1){
+    transform: rotate(45deg);
+    top: 47px;
+}
+#toggle:checked + .checkbox .trace:nth-child(2){
+    transform: translateX(-100px);
+    width: 30px;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#toggle:checked + .checkbox .trace:nth-child(3){
+    transform: rotate(-45deg);
+    top: 47px;
+}
+
+/* Parte 2 */
+
+.container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0097A7;
+}
+
+.card{
+    height: 400px;
+    width: 500px;
+    background-image: url('./Img1.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    filter: grayscale(0.5);
+    color: black;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.card:hover{
+    filter: unset;
+}
+
+.card-wrapper{
+    text-align: center;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    
+    position: relative;
 }
-    
-* {
+.card-wrapper::before{
+    content: "";
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    display: block;
+    border: 1px solid white;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.card-wrapper h2{
+    font-size: 40px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
     margin: 0;
-    padding: 0;
+    transition: 0.3s;
+}
+.card-wrapper p{
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: 0.3s;
+    visibility: hidden;
+    opacity: 0;
 }
 
-.Header{
-    font-size: 30px;
-    color: rosybrown;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: rgb(109, 58, 58);
+.card:hover > .card-wrapper::before{
+    height: 300px;
+    width: 400px;
+    opacity: 1;
+    border-radius: 20px;
 }
 
-.Article {
-  border: 2px solid burlywood;
-  border-radius: 8px;
-  padding: 15px;
-  margin: 10px;
-  background-color: rosybrown;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  color: bisque;
-  font-family:sans-serif;
+.card:hover > .card-wrapper p{
+    opacity: 1;
+    visibility:visible;
+    font-size: 14px;
 }
 
 
-p {
-    font-family:sans-serif;
-    color:black;
-}
+/* Parte3 */
 
-.Footer2 {
-   color: dimgray;
-   margin: 15px;
-}
-
-.Footer1{
-    border: 4px  dashed rosybrown;
-    margin: 20px;
-    padding: 9px;
-    border-radius: 8px;
-}
-
-.Imgg {
-    margin: 10px;
-    border-radius: 40px;
-}
-
-.flex_item{
+.wrapper2{
+    height: 100vh;
+    width: 100vw;
+    background: linear-gradient(-45deg,#00ACC1, #4DD0E1, #00838F,#006064);
+    background-size: 400% 400%;
     display: flex;
-    font-size: 20px;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    animation:backgroundTransition 8s ease-in-out infinite;
+
 }
 
-.flex-comtainer {
+
+.wrapper2 h1{
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    color: #CFD8DC;
+}
+
+.wrapper2 h2{
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    color: #CFD8DC;
+}
+
+.social-midia{
+    margin-top: 1rem;
     display: flex;
-    list-style: none;
-    
 }
 
-.flex-item {
-  background-color:rosybrown ;
-  height: 50px;
-  width: 50px;
-  line-height: 50px;
-  font-size: 20px;
-  text-align: center;
-  margin: 10px;
-  color:bisque;
-  border-bottom-left-radius: 25px
-}
-.column {
+.wrapper2 a{
+    text-decoration: none;
+    color: white;
+    font-size: 24px;
+    padding: 1rem 4rem;
+    border: 1px solid white;
+    min-width: 4rem;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    transition: .5s cubic-bezier(0.55, 0.035, 0.675,0.97);
 }
 
+.wrapper2 a:hover{
+    color:#37474F;
+    background-color:#90A4AE ;
+}
+
+@keyframes backgroundTransition {
+    0%{
+        background-position: 0% 80%;
+    }
+    50%{
+        background-position: 80% 100%;
+    }
+
+    100% {
+        background-position: 0% 98%;
+    }
+}
+
+/* parte4 */
+
+.wrapper3{
+    height: 100vh;
+    width: 100vw;
+    background-color: #0097A7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.chatbot{
+    height: 4rem;
+    width: 8rem;
+    border-radius: 35px;
+    border: 4px solid #84FFFF;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    transform: translateY(10);
+    animation: chatTranslate 2s ease-in-out infinite;
+
+}
+
+.chatbot::before{
+    content: '';
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: -1.3rem;
+    left: 2rem;
+    border-left: 2px solid transparent;
+    border-right: 17px solid transparent;
+    border-top: 12px solid #84FFFF ;
+}
+
+.chetbot_loanding{
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background-color:#84FFFF;
+    transform: scale(1);
+}
+
+.chetbot_loanding:nth-child(1){
+    animation: pulos 1.5s ease-in-out infinite;
+}
+.chetbot_loanding:nth-child(2){
+    animation: pulos 1.5s ease-in-out infinite;
+    animation-delay: 0.2s;
+}
+.chetbot_loanding:nth-child(3){
+    animation: pulos 1.5s ease-in-out infinite;
+    animation-delay: 0.4s;
+}
+
+@keyframes pulos{
+    0%{
+      transform: scale(1);
+    }
+    50%{
+        transform: scale(1.5);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+@keyframes chatTranslate{
+    0%{
+        transform: translateX(0);
+    }
+    50%{
+        transform: translateY(15px);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
